--- a/ExpressExample/package.json
+++ b/ExpressExample/package.json
@@ -9,7 +9,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cookie-parser": "^1.4.3",
     "express": "^4.16.3",
+    "express-error-handler": "^1.1.0",
+    "express-session": "^1.15.6",
     "serve-static": "^1.13.2"
   }
 }
