--- a/ExpressExample/package.json
+++ b/ExpressExample/package.json
@@ -10,9 +10,11 @@
   "license": "ISC",
   "dependencies": {
     "cookie-parser": "^1.4.3",
+    "cors": "^2.8.4",
     "express": "^4.16.3",
     "express-error-handler": "^1.1.0",
     "express-session": "^1.15.6",
+    "multer": "^1.3.0",
     "serve-static": "^1.13.2"
   }
 }
